--- a/index.html
+++ b/index.html
@@ -2,32 +2,52 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Climbing Log App</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>🧗 Climbing Log App</h1>
+    <!-- Home Screen -->
+    <section id="homeScreen">
+      <h1>Climbing Log</h1>
+      <div class="category-box indoor" onclick="openSubcategories('Indoor')">
+        <div class="overlay">
+          <h2>Indoor Climbing</h2>
+        </div>
+      </div>
+      <div class="category-box outdoor" onclick="openSubcategories('Outdoor')">
+        <div class="overlay">
+          <h2>Outdoor Climbing</h2>
+        </div>
+      </div>
+    </section>
 
-    <form id="climbForm">
-      <input type="text" id="climbName" placeholder="Climb Name" required />
-      <input type="text" id="location" placeholder="Location / Gym" required />
-      <input type="text" id="grade" placeholder="Grade (V5, 5.10c...)" required />
-      <select id="type" required>
-        <option value="">Select Type</option>
-        <option value="Bouldering">🪨 Bouldering</option>
-        <option value="Sport">🔩 Sport</option>
-        <option value="Trad">🧵 Trad</option>
-      </select>
-      <input type="date" id="date" required />
-      <input type="number" id="attempts" placeholder="Attempts" />
-      <textarea id="notes" placeholder="Notes..."></textarea>
-      <button type="submit">➕ Add Climb</button>
-    </form>
+    <!-- Subcategories Screen -->
+    <section id="subCategoryScreen" style="display:none">
+      <button onclick="goHome()" class="back-btn">← Back</button>
+      <h2 id="subTitle">Select Type</h2>
+      <div class="subcategory-buttons">
+        <button onclick="openLog('Bouldering')">Bouldering</button>
+        <button onclick="openLog('Top Rope')">Top Rope</button>
+        <button onclick="openLog('Lead')">Lead</button>
+      </div>
+    </section>
 
-    <h2>🗂 Climb Log</h2>
-    <div id="climbList"></div>
+    <!-- Log Screen -->
+    <section id="logScreen" style="display:none">
+      <button onclick="goToSubcategories()" class="back-btn">← Back</button>
+      <h2 id="logTitle"></h2>
+      <form id="climbForm">
+        <input type="text" id="climbName" placeholder="Climb Name" required />
+        <input type="text" id="grade" placeholder="Grade (V5, 5.11a...)" required />
+        <input type="date" id="date" required />
+        <input type="number" id="attempts" placeholder="Attempts" />
+        <textarea id="notes" placeholder="Notes..."></textarea>
+        <button type="submit">Add Climb</button>
+      </form>
+      <div id="climbList"></div>
+    </section>
   </div>
 
   <script src="script.js"></script>
