--- a/index.html
+++ b/index.html
@@ -48,4 +48,7 @@
     </section>
   </div>
 
-  <script src
+  <!-- ✅ Make sure this is here at the end of the body -->
+  <script src="script.js"></script>
+</body>
+</html>
