--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
     }
 
     .indoor {
-      background-image: url('Screenshot 2025-05-14 121139.png');
+      background-image: "C:\Users\nyles\Pictures\Screenshots\Screenshot 2025-05-14 121139.png";
     }
 
     .outdoor {
-      background-image: url('Screenshot 2025-05-14 121256.png');
+      background-image: "C:\Users\nyles\Pictures\Screenshots\Screenshot 2025-05-14 121256.png";
     }
   </style>
 </head>
