--- a/index.html
+++ b/index.html
@@ -57,6 +57,39 @@
     .outdoor {
       background-image: url('Screenshot 2025-05-14 121256.png');
     }
+
+    .subcategory-screen {
+      display: none;
+      margin-top: 2rem;
+      text-align: center;
+    }
+
+    .subcategory-buttons {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+      margin-top: 1rem;
+    }
+
+    .subcategory-buttons button {
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      background-color: #3b82f6;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    .back-btn {
+      margin-top: 2rem;
+      background: transparent;
+      border: none;
+      color: #3b82f6;
+      font-size: 1rem;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -68,12 +101,28 @@
         <div class="category-box outdoor" onclick="navigateToCategory('outdoor')">Outdoor Climbing</div>
       </div>
     </section>
+
+    <!-- Subcategory Screen -->
+    <section id="subcategoryScreen" class="subcategory-screen">
+      <h2 id="categoryTitle"></h2>
+      <div class="subcategory-buttons">
+        <button onclick="navigateToClimb('bouldering')">Bouldering</button>
+        <button onclick="navigateToClimb('toprope')">Top Rope</button>
+        <button onclick="navigateToClimb('lead')">Lead</button>
+      </div>
+    </section>
   </div>
 
   <script>
     function navigateToCategory(category) {
       // Navigate directly to the page for the selected category
       window.location.href = `${category}.html`;
+    }
+
+    function navigateToClimb(climbType) {
+      // Navigate to the specific page for the selected climb type
+      const baseCategory = document.getElementById('categoryTitle').innerText.toLowerCase().split(' ')[0];
+      window.location.href = `${baseCategory}-${climbType}.html`;
     }
   </script>
 </body>
