--- a/index.html
+++ b/index.html
@@ -1,139 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Climbing Log App</title>
   <style>
     body {
+      font-family: Arial, sans-serif;
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f4f4f4;
-      color: #333;
+      padding: 0;
+      background: #f0f0f0;
     }
-
-    .container {
+    header, h2 {
+      text-align: center;
+      padding: 1rem;
+      background-color: #333;
+      color: white;
+    }
+    .category-container {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      margin: 1rem;
+    }
+    .category {
+      padding: 2rem;
+      border-radius: 10px;
+      background-size: cover;
+      background-position: center;
+      width: 180px;
+      height: 120px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    .form-section, .log-table {
       max-width: 600px;
       margin: auto;
       padding: 1rem;
+      background: white;
+      border-radius: 10px;
+      margin-bottom: 2rem;
     }
-
-    h1, h2 {
-      text-align: center;
+    label, select, input, textarea {
+      display: block;
+      width: 100%;
+      margin-top: 0.5rem;
+      margin-bottom: 1rem;
+      padding: 0.5rem;
     }
-
-    .category-list {
-      display: flex;
-      flex-direction: column;
-      gap: 1.5rem;
-      margin-top: 2rem;
-    }
-
-    .category-box {
-      height: 180px;
-      background-size: cover;
-      background-position: center;
+    button {
+      padding: 0.5rem 1rem;
+      background: #333;
       color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 1.5rem;
-      font-weight: bold;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      border: none;
       cursor: pointer;
-      transition: transform 0.2s ease;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.8);
     }
-
-    .category-box:hover {
-      transform: scale(1.02);
-    }
-
-    .indoor {
-      background-image: url('Screenshot 2025-05-14 121139.png');
-    }
-
-    .outdoor {
-      background-image: url('Screenshot 2025-05-14 121256.png');
-    }
-
-    .subcategory-screen {
-      display: none;
-      margin-top: 2rem;
-      text-align: center;
-    }
-
-    .subcategory-buttons {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 1rem;
+    table {
+      width: 100%;
+      border-collapse: collapse;
       margin-top: 1rem;
     }
-
-    .subcategory-buttons button {
-      padding: 0.75rem 1.5rem;
-      font-size: 1rem;
-      background-color: #3b82f6;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    .back-btn {
-      margin-top: 2rem;
-      background: transparent;
-      border: none;
-      color: #3b82f6;
-      font-size: 1rem;
-      cursor: pointer;
+    th, td {
+      padding: 0.5rem;
+      border: 1px solid #ccc;
+      text-align: left;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <!-- Home Screen -->
-    <section id="homeScreen">
-      <h1>Climbing Log</h1>
-      <div class="category-list">
-        <div class="category-box indoor" onclick="showSubcategories('Indoor')">Indoor Climbing</div>
-        <div class="category-box outdoor" onclick="showSubcategories('Outdoor')">Outdoor Climbing</div>
-      </div>
-    </section>
 
-    <!-- Subcategory Screen -->
-    <section id="subcategoryScreen" class="subcategory-screen">
-      <h2 id="categoryTitle"></h2>
-      <div class="subcategory-buttons">
-        <button onclick="alertSubcategory('Bouldering')">Bouldering</button>
-        <button onclick="alertSubcategory('Top Rope')">Top Rope</button>
-        <button onclick="alertSubcategory('Lead')">Lead</button>
-      </div>
-      <button class="back-btn" onclick="goHome()">← Back</button>
-    </section>
-  </div>
+<header>
+  <h1>Climbing Log App</h1>
+</header>
 
-  <script>
-    let currentCategory = "";
+<h2>Select Climbing Type</h2>
+<div class="category-container">
+  <div class="category" style="background-image: url('indoor.jpg');" onclick="selectCategory('Indoor')">Indoor</div>
+  <div class="category" style="background-image: url('outdoor.jpg');" onclick="selectCategory('Outdoor')">Outdoor</div>
+</div>
 
-    function showSubcategories(category) {
-      currentCategory = category;
-      document.getElementById("homeScreen").style.display = "none";
-      document.getElementById("subcategoryScreen").style.display = "block";
-      document.getElementById("categoryTitle").innerText = category + " Climbing";
-    }
+<div class="form-section">
+  <h2>Add Climb Log</h2>
+  <form id="logForm">
+    <label>Category</label>
+    <input id="category" readonly>
 
-    function goHome() {
-      document.getElementById("subcategoryScreen").style.display = "none";
-      document.getElementById("homeScreen").style.display = "block";
-    }
+    <label>Climb Type</label>
+    <select id="type">
+      <option>Bouldering</option>
+      <option>Top Rope</option>
+      <option>Lead</option>
+    </select>
 
-    function alertSubcategory(type) {
-      alert(`${currentCategory} - ${type}`);
-      // Replace this with navigation or a log form later
-    }
-  </script>
+    <label>Date</label>
+    <input type="date" id="date">
+
+    <label>Location</label>
+    <input type="text" id="location">
+
+    <label>Route Name</label>
+    <input type="text" id="route">
+
+    <label>Grade</label>
+    <input type="text" id="grade">
+
+    <label>Style</label>
+    <select id="style">
+      <option>Flash</option>
+      <option>Onsight</option>
+      <option>Redpoint</option>
+      <option>Project</option>
+    </select>
+
+    <label>Attempts</label>
+    <input type="number" id="attempts">
+
+    <label>Notes</label>
+    <textarea id="notes" rows="3"></textarea>
+
+    <button type="button" onclick="saveLog()">Save Log</button>
+  </form>
+</div>
+
+<div class="log-table">
+  <h2>Climb Logs</h2>
+  <table id="logsTable">
+    <thead>
+      <tr>
+        <th>Date</th><th>Type</th><th>Location</th><th>Route</th><th>Grade</th><th>Style</th><th>Attempts</th><th>Notes</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+</div>
+
+<script>
+  function selectCategory(type) {
+    document.getElementById('category').value = type;
+  }
+
+  function saveLog() {
+    const date = document.getElementById('date').value;
+    const type = document.getElementById('type').value;
+    const category = document.getElementById('category').value;
+    const location = document.getElementById('location').value;
+    const route = document.getElementById('route').value;
+    const grade = document.getElementById('grade').value;
+    const style = document.getElementById('style').value;
+    const attempts = document.getElementById('attempts').value;
+    const notes = document.getElementById('notes').value;
+
+    const table = document.getElementById('logsTable').querySelector('tbody');
+    const row = table.insertRow();
+    row.innerHTML = `
+      <td>${date}</td>
+      <td>${category} - ${type}</td>
+      <td>${location}</td>
+      <td>${route}</td>
+      <td>${grade}</td>
+      <td>${style}</td>
+      <td>${attempts}</td>
+      <td>${notes}</td>
+    `;
+
+    document.getElementById('logForm').reset();
+    document.getElementById('category').value = category;
+  }
+</script>
+
 </body>
 </html>
