--- a/index.html
+++ b/index.html
@@ -1,175 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Climbing Log App</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
-      background: #f0f0f0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
     }
-    header, h2 {
-      text-align: center;
+
+    header {
+      background-color: #222;
+      color: white;
       padding: 1rem;
-      background-color: #333;
-      color: white;
+      text-align: center;
     }
-    .category-container {
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      margin: 1rem;
-    }
-    .category {
-      padding: 2rem;
-      border-radius: 10px;
-      background-size: cover;
-      background-position: center;
-      width: 180px;
-      height: 120px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    .form-section, .log-table {
-      max-width: 600px;
+
+    .container {
+      max-width: 800px;
       margin: auto;
       padding: 1rem;
-      background: white;
-      border-radius: 10px;
-      margin-bottom: 2rem;
     }
+
+    .category-list {
+      display: flex;
+      justify-content: space-around;
+      margin: 2rem 0;
+      gap: 1rem;
+      flex-wrap: wrap;
+    }
+
+    .category-box {
+      flex: 1 1 40%;
+      height: 150px;
+      background-size: cover;
+      background-position: center;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.5rem;
+      font-weight: bold;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
+
+    .category-box:hover {
+      transform: scale(1.03);
+    }
+
+    form {
+      background: white;
+      padding: 1rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+
     label, select, input, textarea {
       display: block;
       width: 100%;
-      margin-top: 0.5rem;
       margin-bottom: 1rem;
-      padding: 0.5rem;
     }
+
+    select, input, textarea {
+      padding: 0.5rem;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+
     button {
-      padding: 0.5rem 1rem;
-      background: #333;
+      background-color: #222;
       color: white;
       border: none;
+      padding: 0.75rem 1.5rem;
+      border-radius: 6px;
       cursor: pointer;
     }
+
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 1rem;
+      margin-top: 2rem;
     }
+
     th, td {
-      padding: 0.5rem;
       border: 1px solid #ccc;
+      padding: 0.5rem;
       text-align: left;
+    }
+
+    h2 {
+      margin-top: 2rem;
     }
   </style>
 </head>
 <body>
+  <header>
+    <h1>Climbing Log App</h1>
+  </header>
 
-<header>
-  <h1>Climbing Log App</h1>
-</header>
+  <div class="container">
+    <h2>Select a Climbing Category</h2>
+    <div class="category-list">
+      <div class="category-box" style="background-image: url('Screenshot\ 2025-05-14\ 121139.png');" onclick="setCategory('Indoor')">Indoor Climbing</div>
+      <div class="category-box" style="background-image: url('Screenshot\ 2025-05-14\ 121256.png');" onclick="setCategory('Outdoor')">Outdoor Climbing</div>
+    </div>
 
-<h2>Select Climbing Type</h2>
-<div class="category-container">
-  <div class="category" style="background-image: url('indoor.jpg');" onclick="selectCategory('Indoor')">Indoor</div>
-  <div class="category" style="background-image: url('outdoor.jpg');" onclick="selectCategory('Outdoor')">Outdoor</div>
-</div>
+    <form id="logForm">
+      <label>Category</label>
+      <input type="text" id="category" readonly required>
 
-<div class="form-section">
-  <h2>Add Climb Log</h2>
-  <form id="logForm">
-    <label>Category</label>
-    <input id="category" readonly>
+      <label>Type</label>
+      <select id="type" required>
+        <option value="">Select</option>
+        <option>Bouldering</option>
+        <option>Top Rope</option>
+        <option>Lead</option>
+      </select>
 
-    <label>Climb Type</label>
-    <select id="type">
-      <option>Bouldering</option>
-      <option>Top Rope</option>
-      <option>Lead</option>
-    </select>
+      <label>Date</label>
+      <input type="date" id="date" required>
 
-    <label>Date</label>
-    <input type="date" id="date">
+      <label>Location</label>
+      <input type="text" id="location" required>
 
-    <label>Location</label>
-    <input type="text" id="location">
+      <label>Route Name</label>
+      <input type="text" id="route" required>
 
-    <label>Route Name</label>
-    <input type="text" id="route">
+      <label>Grade</label>
+      <input type="text" id="grade">
 
-    <label>Grade</label>
-    <input type="text" id="grade">
+      <label>Style</label>
+      <select id="style">
+        <option>Flash</option>
+        <option>Onsight</option>
+        <option>Redpoint</option>
+        <option>Project</option>
+      </select>
 
-    <label>Style</label>
-    <select id="style">
-      <option>Flash</option>
-      <option>Onsight</option>
-      <option>Redpoint</option>
-      <option>Project</option>
-    </select>
+      <label>Attempts</label>
+      <input type="number" id="attempts" min="1">
 
-    <label>Attempts</label>
-    <input type="number" id="attempts">
+      <label>Notes</label>
+      <textarea id="notes" rows="3"></textarea>
 
-    <label>Notes</label>
-    <textarea id="notes" rows="3"></textarea>
+      <button type="button" onclick="saveLog()">Save Log</button>
+    </form>
 
-    <button type="button" onclick="saveLog()">Save Log</button>
-  </form>
-</div>
+    <h2>Climbing Logs</h2>
+    <table id="logsTable">
+      <thead>
+        <tr>
+          <th>Date</th><th>Category</th><th>Type</th><th>Location</th><th>Route</th><th>Grade</th><th>Style</th><th>Attempts</th><th>Notes</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
 
-<div class="log-table">
-  <h2>Climb Logs</h2>
-  <table id="logsTable">
-    <thead>
-      <tr>
-        <th>Date</th><th>Type</th><th>Location</th><th>Route</th><th>Grade</th><th>Style</th><th>Attempts</th><th>Notes</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</div>
+  <script>
+    function setCategory(name) {
+      document.getElementById('category').value = name;
+    }
 
-<script>
-  function selectCategory(type) {
-    document.getElementById('category').value = type;
-  }
+    function saveLog() {
+      const category = document.getElementById('category').value;
+      const type = document.getElementById('type').value;
+      const date = document.getElementById('date').value;
+      const location = document.getElementById('location').value;
+      const route = document.getElementById('route').value;
+      const grade = document.getElementById('grade').value;
+      const style = document.getElementById('style').value;
+      const attempts = document.getElementById('attempts').value;
+      const notes = document.getElementById('notes').value;
 
-  function saveLog() {
-    const date = document.getElementById('date').value;
-    const type = document.getElementById('type').value;
-    const category = document.getElementById('category').value;
-    const location = document.getElementById('location').value;
-    const route = document.getElementById('route').value;
-    const grade = document.getElementById('grade').value;
-    const style = document.getElementById('style').value;
-    const attempts = document.getElementById('attempts').value;
-    const notes = document.getElementById('notes').value;
+      if (!category || !type || !date || !location || !route) {
+        alert("Please fill in all required fields.");
+        return;
+      }
 
-    const table = document.getElementById('logsTable').querySelector('tbody');
-    const row = table.insertRow();
-    row.innerHTML = `
-      <td>${date}</td>
-      <td>${category} - ${type}</td>
-      <td>${location}</td>
-      <td>${route}</td>
-      <td>${grade}</td>
-      <td>${style}</td>
-      <td>${attempts}</td>
-      <td>${notes}</td>
-    `;
+      const row = document.createElement("tr");
+      row.innerHTML = `
+        <td>${date}</td>
+        <td>${category}</td>
+        <td>${type}</td>
+        <td>${location}</td>
+        <td>${route}</td>
+        <td>${grade}</td>
+        <td>${style}</td>
+        <td>${attempts}</td>
+        <td>${notes}</td>
+      `;
 
-    document.getElementById('logForm').reset();
-    document.getElementById('category').value = category;
-  }
-</script>
-
+      document.querySelector("#logsTable tbody").appendChild(row);
+      document.getElementById("logForm").reset();
+      document.getElementById("category").value = category;
+    }
+  </script>
 </body>
 </html>
